maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:28: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^ShortestPathMaze:10: error: (Int, Int) does not take parameters
      Coord(sol+1)=Coord(sol+1)+marquage(i(0),i(1),sol)
                                          ^ShortestPathMaze:10: error: (Int, Int) does not take parameters
      Coord(sol+1)=Coord(sol+1)+marquage(i(0),i(1),sol)
                                               ^ShortestPathMaze:28: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^ShortestPathMaze:33: error: value :: is not a member of Array[Int]
      L::(Array(x,y-1))
       ^ShortestPathMaze:39: error: value :: is not a member of Array[Int]
      L::(Array(x-1,y))
       ^ShortestPathMaze:45: error: value :: is not a member of Array[Int]
      L::(Array(x+1,y))
       ^ShortestPathMaze:51: error: value :: is not a member of Array[Int]
      L::(Array(x,y+1))
       ^